--- a/clientmanager/src/main/resources/application.properties
+++ b/clientmanager/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=Client CRUD Application
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
